--- a/BookFaceApp/BookFaceApp.csproj
+++ b/BookFaceApp/BookFaceApp.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookFaceApp.Core\BookFaceApp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
