--- a/BookFaceApp/appsettings.Development.json
+++ b/BookFaceApp/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Identity": {
+    "RequireConfirmedAccount": false,
+    "RequireConfirmedEmail": false,
+    "RequireConfirmedPhoneNumber": false,
+    "RequireNonAlphanumeric": false,
+    "RequireUppercase": false,
+    "RequireLowercase": false
   }
 }
